# clipocr-rs

./: Cargo.toml
src/: baidu_ocr_api.rs  clipboard.rs  lib.rs  main.rs
