[package]
name = "clipocr-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arboard = "3.2.0"
async-trait = "0.1.64"
base64 = "0.21.0"
clap = { version = "4.1.4", features = ["derive"] }
dirs = "4.0.0"
image = "0.24.5"
reqwest = { version = "0.11.14", features = ["json"] }
rustyline = "10.1.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.92"
serde_yaml = "0.9.17"
tokio = { version = "1.25.0", features = ["full"] }
